# ELDA

./: CMakeLists.txt  DOCUMENTATION.MD  README.md  main.cpp
docs/: Makefile  elda_booklet.tex
include/elda/: linalg.hpp  matrix.hpp  transforms.hpp  vector_utils.hpp
src/: matrix.cpp  transforms.cpp  vector_utils.cpp
